# agaEngine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
core/: BuildConfig.h  Common.h  Logger.cpp  Logger.h  Macros.h  Memory.h  String.cpp  String.h  Typedefs.h
core/math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Rect2D.h  Vector2.h  Vector3.h
data/shaders/: compile_shaders.sh
main/: AgaEngineMain.cpp  AgaMain.cpp  MainLoop.cpp  MainLoop.h
platform/: Platform.cpp  Platform.h  PlatformFileSystem.cpp  PlatformFileSystem.h  PlatformWindow.cpp  PlatformWindow.h
platform/windows/: WindowsPlatform.cpp  WindowsPlatform.h  WindowsPlatformWindow.cpp  WindowsPlatformWindow.h
platform/x11/: X11Platform.cpp  X11Platform.h  X11PlatformFileSystem.cpp  X11PlatformFileSystem.h  X11PlatformWindow.cpp  X11PlatformWindow.h
render/: VulkanRenderer.cpp  VulkanRenderer.h
